# salad-calculator

./: Cargo.toml
crate/: Cargo.toml  README.md
crate/src/: lib.rs  main.rs  word_salad.rs
crate/word_lists/: salad_dictionary.txt
src/: dictionary.rs  lib.rs  main.rs  trie.rs  word_salad.rs
wasm-pkg/: Cargo.toml
wasm-pkg/src/: lib.rs
