[package]
name = "salad_calculator"
version = "0.1.1"
description = "A WordSalad calculator compiled to WebAssembly!"
authors = ["<henryk1229> <henryk1229@gmail.com>"]
keywords = ["word game", "word salad", "solve"]
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
salad_calculator = { path = "../crate" }
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
